k8s/template-deployment.yaml
apiVersion: apps/v1beta1 
kind: Deployment 
metadata: 
  name: template-deployment 
  labels: 
    app: template
spec: 
  replicas: 1 
  minReadySeconds: 10 
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1 
      maxUnavailable: 0 
  selector: 
    matchLabels: 
      app: template 
  template: 
    metadata:  
      labels: 
        app: template 
    spec: 
      containers: 
      - name: template
        image: mgmtsv-registry.cloudzcp.io/template/template:01
        ports:  
        - containerPort: 8080 
        imagePullPolicy: Always 
        resources: 
          requests: 
            memory: "512Mi" 
            cpu: "50m" 
          limits: 
            memory: "1Gi" 
            cpu: "200m"
