k8s/template-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: template-service 
spec: 
  ports: 
  - name: "http" 
    port: 8080
    targetPort: 8080
  selector: 
    app: template
  type: ClusterIP
